--- a/_posts/2019-09-02-Salsa!.md
+++ b/_posts/2019-09-02-Salsa!.md
@@ -1,3 +1,7 @@
+---
+title: "Salsa!"
+date: 2019-09-02
+---
 https://www.cookingclassy.com/fresh-homemade-salsa/
 I prefer extra cumin and half fresh tomatoes, half canned!
 
